--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//WebContent/Registrar.jsp=UTF-8
 encoding//WebContent/index.jsp=UTF-8
 encoding//WebContent/menu-director.jsp=UTF-8
+encoding//WebContent/menuFotografia.jsp=UTF-8
